fdo#67707 - avoid crash with sidebar when switching to writer from impress.

Change-Id: I0010663951fe67bfb864ffdaecb251b3da5a3ac3